# polly

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEBUG_MODE_INTEGRATION.md  DEPLOYMENT.md  DEPLOY_AND_FIX_GUIDE.md  DOCKER_DEV_GUIDE.md  DOCKER_SETUP.md  DOCKER_UPDATES.md  Dockerfile  JSON_IMPORT_FORMAT.md  Makefile  PERFORMANCE_OPTIMIZATION.md  POLL_SCHEDULING_FIXES.md  POLL_URL_GENERATOR.md  README.md  REDIS_INTEGRATION.md  ROLE_PING_CACHING_IMPLEMENTATION.md  add_emojis_column.py  add_image_message_text_column.py  add_multiple_choice_column.py  add_role_ping_columns.py  comprehensive_poll_example.json  datetime_validation_test.py  debug_missing_polls.py  demo_cache_cleanup.py  demo_debug_mode.py  deploy  deploy.sh  discord_emoji_validator.py  discord_emoji_validator.py.backup  docker-compose.dev.yml  docker-compose.mariadb.yml  docker-compose.postgres.yml  docker-compose.yml  docker-entrypoint.sh  example_poll.json  fix_existing_poll.py  fix_poll_simple.py  (+43 more)
.github/: copilot-instructions.md
cli/: README.md  __init__.py  main.py
deprecated/: auth.py.debug  create_form.html  dashboard.html  dashboard.html.backup  dashboard.html.backup3  dashboard_htmx_debug.html  database.py.backup  database.py.backup2  main.py  main.py.backup2  main.py.backup3  main.py.backup4
json/: JSON_IMPORT_FORMAT.md  comprehensive_poll_example.json  example_poll.json
memory-bank/: activeContext.md  automaticMemoryTools.md  backgroundTasksClosureBugFix.md  bulkOperationsDesign.md  bulkOperationsJSBugAnalysis.md  cliImplementation.md  duplicateNotificationAnalysis.md  enhancedErrorHandlingDesign.md  implementationProgress.md  memoryAnalysisFindings.md  memoryOptimizationGuide.md  memoryOptimizationImplementation.md  pollEditServiceDesign.md  pollEditServiceEnhancementAnalysis.md  (+8 more)
polly/: auth.py  (+61 more)
(+122 files in other folders)
