[project]
name = "polly"
version = "0.2.0"
description = "Discord poll bot with web interface"
authors = [{name = "Polly Team"}]
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.11.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.1",
    "pytz>=2025.2",
    "aiofiles>=24.1.0",
    "pillow>=10.0.0",
    "emoji>=2.14.1",
    "python-decouple>=3.8",
    "psutil>=7.0.0",
    "redis>=5.0.0",
    "playwright>=1.55.0",
    "pandas>=2.3.2",
    "python-magic>=0.4.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["polly"]

[dependency-groups]
dev = [
    "jose>=1.0.0",
    "memray>=1.18.0",
    "psutil>=7.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-memray>=1.8.0",
    "pytest-mock>=3.12.0",
    "requests>=2.32.5",
    "ruff>=0.12.11",
]
